+save button (dont forget to fix overflow bugs)

--- a/gui/styles.css
+++ b/gui/styles.css
@@ -27,6 +27,9 @@ body {
     background-color: var(--body);
 }
 
+
+/* ================================================================ */
+
 .wrapper {
     display: flex;
     position: absolute;
@@ -37,20 +40,26 @@ body {
     justify-content: space-between;
 }
 
+
+/* ================================================================ */
+
+
+/* ================================================================ */
+
 .settings-wrapper {
-    display: flex;
+    display: none;
     width: 100%;
     height: 100%;
     justify-content: center;
-    align-items: center;
     flex-wrap: nowrap;
     flex-direction: row;
+    animation: anim-lineUp 0.6s ease-out;
 }
 
 .settings-view {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 700px;
     width: 700px;
 }
 
@@ -102,14 +111,16 @@ body {
     flex-direction: column;
     gap: 40px;
     overflow: scroll;
+    height: 600px;
+    scrollbar-width: thin;
 }
 
 .settings-section-title {
-    font-weight: 500;
     color: var(--settings-menu-section-color);
-    border-bottom: 2px solid var(--secondary-font-color);
-    font-size: 1.4rem;
     margin-bottom: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.7rem;
 }
 
 .settings-section-content {
@@ -124,12 +135,49 @@ body {
     justify-content: space-between;
     height: 50px;
     align-items: center;
-    border-bottom: 1px dotted var(--settings-option-border-colour)
+    border-top: 1px solid var(--settings-option-border-colour)
+}
+
+.settings-item:hover {
+    animation: settings-item-border 0.4s forwards;
 }
 
 .settings-item-title {
     font-weight: 500;
 }
+
+.settings-submit-btn {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: auto;
+}
+
+.settings-submit-btn button {
+    display: block;
+    height: 40px;
+    padding: 5px 30px;
+    background: none;
+    cursor: pointer;
+    outline: none;
+    border-radius: 0;
+    border: none;
+    font-weight: 500;
+    text-align: center;
+    align-items: center;
+}
+
+.settings-submit-btn button:hover {
+    background-color: var(--secondary-font-color);
+    text-decoration: underline;
+    animation: 0.15s submit-btn-border forwards;
+}
+
+
+/* ================================================================ */
+
+
+/* ================================================================ */
 
 .sidebar {
     display: flex;
@@ -321,6 +369,12 @@ body {
     filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(345deg) brightness(101%) contrast(101%);
 }
 
+
+/* ================================================================ */
+
+
+/* ================================================================ */
+
 .main-view {
     display: flex;
     align-items: center;
@@ -356,7 +410,7 @@ body {
 
 .main-bar-item button:hover {
     text-decoration: underline;
-    border-bottom: 2px solid #8BB8E8;
+    animation: 0.2s menubar-border forwards;
 }
 
 .main-bar-item img {
@@ -364,9 +418,152 @@ body {
     width: 25px;
 }
 
+
+/* ================================================================ */
+
+
+/* ================================================================ */
+
 .pending-requests-view {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    animation: anim-lineUp 0.6s ease-out;
+}
+
+.pending-requests-wrapper {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 50px;
+    align-content: center;
+    width: 700px;
+    height: 100%;
 }
+
+.pending-requests-title {
+    color: var(--settings-menu-section-color);
+    margin-bottom: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+    margin-top: 15px;
+}
+
+.pending-requests {
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    height: 100%;
+}
+
+.pending-request-contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-top: 1px solid var(--secondary-font-color);
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.pending-request-contact img {
+    height: 45px;
+    width: 45px;
+}
+
+.pending-request-contact-info {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    width: 200px;
+}
+
+.pending-request-contact-username {
+    display: block;
+    font-weight: 500;
+}
+
+.pending-request-contact-status {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    color: black;
+    font-weight: 400;
+    font-size: 0.7rem;
+    width: 200px;
+}
+
+.start {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.end img {
+    height: 32px;
+    width: 32px;
+}
+
+.end button {
+    border: none;
+    border-radius: 50%;
+    background: none;
+    outline: none;
+    cursor: pointer;
+    align-items: center;
+}
+
+
+/* ================================================================ */
+
+
+/* ================================================================ */
+
+@keyframes menubar-border {
+    0% {
+        border-bottom: 0px solid #8BB8E8;
+    }
+    100% {
+        border-bottom: 3px solid #8BB8E8;
+    }
+}
+
+@keyframes settings-item-border {
+    0% {
+        border-bottom: 0px solid #8BB8E8;
+    }
+    100% {
+        border-bottom: 2px solid #8BB8E8;
+    }
+}
+
+@keyframes submit-btn-border {
+    0% {
+        border-bottom: 0px solid green;
+    }
+    100% {
+        border-bottom: 2px solid green;
+    }
+}
+
+@keyframes anim-lineUp {
+    0% {
+        opacity: 0;
+        transform: translateY(80%);
+    }
+    20% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+
+/* ================================================================ */
